# pics-hosting

./: .env.example  .gitignore  README.md  deploy.sh  dmanage.py  docker-compose.yml  helper.sh  manage.py  pyproject.toml
app/: __init__.py
app/services/: logs.py  sql_tools.py
bot/: .env  .env.example  .gitignore  Dockerfile  dmanage.py  manage.sh  requirements.txt
bot/.devcontainer/: devcontainer.json  docker-compose.yml  requirements.txt
bot/bot/: __init__.py  bot_app.py  test.py
bot/bot/commands/: new_image.py  start.py
bot/bot/models/: __init__.py  picture.py  telegram_users.py
bot/bot/services/: ban_check.py  create_trigger.py  dbconnect.py  get_tokens.py  image_functions.py  last_login.py  saveimage.py
hosting/: __init__.py  admin.py  app.py  route.py
hosting/bot_kernel/: bot.py
hosting/bot_kernel/services/: get_tokens.py
hosting/models/: __init__.py  admins.py  bots.py  pic_view.py  pics.py  telegram_user.py  user.py
hosting/services/: create_user.py  db.py  sql_tools.py
hosting/templates/: home.html  otp_login.html
kernel/: .env.example  dmanage.py  entrypoint.sh  manage.sh  requirements.txt
kernel/.devcontainer/: devcontainer.json  requirements.txt
kernel/hosting/: __init__.py  admin.py  route.py
kernel/hosting/models/: __init__.py  admins.py  bots.py  pics.py  telegram_user.py
kernel/hosting/services/: add_admin.py  create_user.py
kernel/hosting/templates/: login.html  view_image.html
nginx/: prod.conf
